# pymc-example

./: .gitignore  Makefile  README.md  bayesian_intro.ipynb  hierarchical_bayesian_intro.ipynb  pyproject.toml
example_data/: manhattan_heart_attacks.csv
