[tool.poetry]
name = "pymc-example"
version = "0.1.0"
description = ""
authors = ["Douglas Wong"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 100
extend-exclude = "notebooks"

[tool.isort]
skip = ["__init__.py", ".venv"]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pylint = "^3.2.2"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
pymc = "^5.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
